# untangled_snakes

./: .gitignore  README.md  README.org  flake.nix  pyproject.toml
src/: pyproject.toml
src/python_resolver/: __init__.py  distribution.py  identifier.py  metadata.py  providers.py
src/tests/: conftest.py  test_classes.py  test_provider.py  test_provider_integration.py
src/tests/cases/requests-socks/: inputs.json  lock.json
src/untangled_snakes/: __init__.py  candidate.py  distribution.py  finders.py  test_cases.py
templates/app/: flake.nix  pyproject.toml
tests/: conftest.py  test_classes.py
untangled_snakes/: __init__.py  app_context.py  candidate.py  distribution.py  finders.py  metadata.py  providers.py  reporters.py  resolve.py  settings.py  test_cases.py
