[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "untangled_snakes"
authors = [
    {name = "Paul Haerle", email = "hello@phaer.org"},
]
description = "Experiments with python packaging"
requires-python = ">=3.10"

dependencies = [
    "requests",
    "rich",
    "python-nix"
]
dynamic = ["version"]

[project.optional-dependencies]
dev = ["ipython"]

[project.scripts]
untangled_snakes = "untangled_snakes:main"
