[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "untangled_snakes"
version = "0.1"
authors = [
    {name = "Paul Haerle", email = "hello@phaer.org"},
]
description = "Experiments with python packaging"
requires-python = ">=3.10"

dependencies = [
    "pdm",
    "tomli",
    "requests==2.30.0",
    "rich",
    "typer[all]",
    "python-nix"
]

[project.optional-dependencies]
dev = ["ipython"]

[project.scripts]
untangled_snakes = "untangled_snakes.cli:app"
