[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "untangled_snakes"
authors = [
    {name = "Paul Haerle", email = "hello@phaer.org"},
]
description = "Experiments with python resolving"
requires-python = ">=3.10"

dependencies = [
    "packaging",
    "requests",
]
dynamic = ["version"]

[project.scripts]
untangled_snakes = "untangled_snakes:main"
